--- a/MocWorker/pom.xml
+++ b/MocWorker/pom.xml
@@ -24,5 +24,12 @@
             <artifactId>spark-core_2.12</artifactId>
             <version>3.2.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.12.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
