--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
-            <scope>test</scope>
+            <scope>org.apache.spark.test</scope>
         </dependency>
     </dependencies>
 
