--- a/Worker/pom.xml
+++ b/Worker/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>Aop2YarnClient</artifactId>
+        <artifactId>Spark-Proxy</artifactId>
         <groupId>fdu.daslab</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -24,12 +24,6 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!--  Spark  -->
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.12</artifactId>
-            <version>3.1.2</version>
-        </dependency>
     </dependencies>
 
 </project>
