--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fdu.daslab</groupId>
-    <artifactId>Aop2YarnClient</artifactId>
+    <artifactId>Spark-Proxy</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
