add launch script for Dispatcher and Worker

--- a/conf/common.properties
+++ b/conf/common.properties
@@ -4,3 +4,6 @@ reschedule.dst.executor=external
 # redis connection information
 redis.host=
 redis.password=
+
+# host selector
+host.selector=RANDOM
