--- a/common/pom.xml
+++ b/common/pom.xml
@@ -25,6 +25,14 @@
             <version>3.1.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
